--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -1,8 +1,11 @@
-name: run main.py
+name: test-actions-workflow
+
+# on:
+#   schedule:
+#     - cron: '*/5 * * * *' # Every 5 minutes test purposes.
 
 on:
-  schedule:
-    - cron: '*/5 * * * *' # Every 5 minutes test purposes.
+  workflow_dispatch:
     # - cron: '0 0 * * *' # Every day at 00:00
 
 jobs:
