--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -26,20 +26,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: execute py script # run main.py
+      - name: execute test script # run main.py
         # env:
         #   SOME_SECRET: ${{ secrets.SOME_SECRET }}
         run: python Pipelines/update_24_hours_test.py
-
-      - name: commit files
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A
-          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
-          
-      - name: push changes
-        uses: ad-m/github-push-action@v0.6.0
+      
+      - name: commit and push changes
+        uses: devops-infra/action-commit-push@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main 
+            github_token: ${{ secrets.GITHUB_TOKEN }}
